Create class to hide scrollbar in testimonials section

--- a/assets/app.css
+++ b/assets/app.css
@@ -74,3 +74,12 @@ body {
 .st0 {
     @apply fill-secondaryLight;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
